[package]
name = "my-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
log = "0.4"
once_cell = "1.5"
pretty_env_logger = "0.5.0"
rand = "0.7"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = [
    "io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"
]}
[dependencies.ed25519-dalek]
version = "1"

